--- a/freshshop-master_1차/adminpage11counseloneonone-tom.html
+++ b/freshshop-master_1차/adminpage11counseloneonone-tom.html
@@ -27,7 +27,9 @@
     <link rel="stylesheet" href="css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
-    
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/custom-tom.css">    
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -89,8 +91,21 @@
   </header>
   <!--adminmainvetmanagement-->
     <div> 
-        <h1 style="text-align: center; font-size:30px; margin-top:5%;">회원정보 수정</h1>
+        <h1 style="text-align: center; font-size:30px; margin-top:5%;">1:1상담 관리</h1>
     </div>
+            <!-- search 버튼 시작 -->
+            <div class="row">
+              <div class="main-search-input-wrap" >
+                  <div class="main-search-input fl-wrap" style="margin-top: 30px;">
+                      <div class="main-search-input-item"> 
+                          <input type="text" value="" placeholder="Search Products..."> 
+                      </div> 
+                    <button class="main-search-button">Search</button>
+                  </div>
+              </div>
+            </div>
+            <!--search button finished...-->
+            <!--1:1 상담 관리 리스트 시작-->
     <div style="margin-top: 40px; border-style: 3px solid orange ">
         <table style="margin-left: auto; margin-right: auto; text-align: center;">
           <tr>
@@ -120,20 +135,147 @@
         </tr>
         </table>
     </div>
-    <div style="margin-top: 40px">
-      <table style="margin-left:auto; margin-right:auto; text-align: center;">
-            <tr>
-                <td><button style="margin-right: 30px;" type="button" onclick="location.href='adminpage4usermanage-tom.html'">수정완료</button></td>
-                <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage4usermanage-tom.html'">회원삭제</button></td>
-            </tr>
-      </table>
-      </div>
+
 
   
 
   
   
 
+
+        <!-- Start Footer  -->
+        <footer>
+          <div class="footer-main">
+            <div class="container">
+              <div class="row">
+                <!--Footer 1번 (회사정보 부분)-->
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                  <div class="footer-link-contact">
+                    <h4 class="text_custom">PawMap</h4>
+                    <ul>
+                      <li>
+                        <p>
+                          <i class="fas fa-map-marker-alt"></i>Address: 서울시
+                          강남구 강남대로 11길 13
+                        </p>
+                      </li>
+                      <li>
+                        <p>
+                          <i class="fas fa-phone-square"></i>Phone:
+                          <a href="tel:+1-888705770">+82-2-345-1234</a>
+                        </p>
+                      </li>
+                      <li>
+                        <p>
+                          <i class="fas fa-envelope"></i>Email:
+                          <a href="mailto:contactinfo@gmail.com"
+                            >contactpawmap@gmail.com</a
+                          >
+                        </p>
+                      </li>
+                      <li>
+                        <p>
+                          <i class="fas fa-user"></i>대표자:
+                          <a href="mailto:contactinfo@gmail.com">고결</a>
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!--Footer 2번 (소셜미디어 부분)-->
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                  <div class="footer-link-contact">
+                    <h4>Social Media</h4>
+                    <div class="footer-top-box">
+                      <p style="margin-left: 20px">
+                        하기 링크를 통해 더 많은 소식을 받아 보세요 !
+                      </p>
+                      <ul>
+                        <li>
+                          <p>
+                            <a href="#" class="inner-box"
+                              ><i
+                                class="fab fa-facebook inner-box-icon"
+                                aria-hidden="true"
+                              ></i
+                            ></a>
+                          </p>
+                        </li>
+                        <li>
+                          <p>
+                            <a href="#" class="inner-box"
+                              ><i
+                                class="fab fa-twitter inner-box-icon"
+                                aria-hidden="true"
+                              ></i
+                            ></a>
+                          </p>
+                        </li>
+                        <li>
+                          <p>
+                            <a href="#" class="inner-box"
+                              ><i
+                                class="fab fa-linkedin inner-box-icon"
+                                aria-hidden="true"
+                              ></i
+                            ></a>
+                          </p>
+                        </li>
+                        <li>
+                          <p>
+                            <a href="#" class="inner-box"
+                              ><i
+                                class="fab fa-google-plus inner-box-icon"
+                                aria-hidden="true"
+                              ></i
+                            ></a>
+                          </p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <!--Footer 3번 (Information 부분)-->
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                  <div class="footer-link-contact">
+                    <h4>Information</h4>
+                    <div class="footer-link">
+                      <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">개인정보 처리 방침</a></li>
+                        <li><a href="#">이용 약관</a></li>
+                        <li><a href="#">위치기반 서비스 이용 약관</a></li>
+                        <li><a href="#">제휴 문의</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <p class="footer-company">
+              All Rights Reserved. &copy; 2021 <a href="#">PawMap</a>
+            </p>
+          </div>
+        </footer>
+    <!-- End Footer  -->
+
+    <!--채팅 아이콘-->
+    <!-- <button id="chat_icon" onclick="hideDisplay()"
+      ><i class="far fa-comment"></i></button> -->
+    <!--채팅 아이콘 끝-->
+
+    <!-- 채팅 모달 추가될 자리-->
+    <!-- <div class="chat_container">
+      <button class="chat_close" onclick="chatHide()"><i class="fas fa-times"></i></button>
+    </div> -->
+    <!-- 채팅 모달 끝-->
+
+    <a href="#" id="back-to-top" title="Back to top" style="display: none"
+      >&uarr;</a>
+ 
+  
 
 
     <!-- ALL JS FILES -->
