--- a/freshshop-master_1차/adminpage1main-tom.html
+++ b/freshshop-master_1차/adminpage1main-tom.html
@@ -27,7 +27,9 @@
     <link rel="stylesheet" href="css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
-    
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/custom-tom.css">
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -99,7 +101,7 @@
                     </div>
                     <div class="service-desc">
                         <h4>제휴병원 관리</h4>
-                        <p>Track, return, or buy things again</p>
+                        <p>제휴된 동물 병원 정보 관리 및 수정</p>
                     </div>
                 </div>
             </div>
@@ -112,7 +114,7 @@
                     </div>
                     <div class="service-desc">
                         <h4>회원정보 관리</h4>
-                        <p>Edit login, name, and mobile number</p>
+                        <p>회원정보 관리 및 수정</p>
                     </div>
                 </div>
             </div>
@@ -125,7 +127,7 @@
                     </div>
                     <div class="service-desc">
                         <h4>보호소정보 관리</h4>
-                        <p>Edit addresses for orders and gifts</p>
+                        <p>동불 보호소 정보 관리 및 수정</p>
                     </div>
                 </div>
             </div>
@@ -138,7 +140,7 @@
                     </div>
                     <div class="service-desc">
                         <h4>커뮤니티 게시판 관리</h4>
-                        <p>Edit or add payment methods</p>
+                        <p>커뮤니티 게시판 관리 및 수정</p>
                     </div>
                 </div>
             </div>
@@ -151,7 +153,7 @@
                     </div>
                     <div class="service-desc">
                         <h4>1:1 상담 관리</h4>
-                        <p>View benefits and payment settings</p>
+                        <p>1:1 상담 관리 하는 곳</p>
                     </div>
                 </div>
             </div>
@@ -164,7 +166,7 @@
                     </div>
                     <div class="service-desc">
                         <h4>후원금 관리</h4>
-                        <p>Add money to your balance</p>
+                        <p>후원금 명단 확인</p>
                     </div>
                 </div>
             </div>
@@ -182,12 +184,10 @@
                 </div>
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label for="firstName">First name *</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                            <label for="firstName">병원 이름</label>
                             <div class="invalid-feedback"> Valid first name is required. </div>
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="lastName">Last name *</label>
                             <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
                             <div class="invalid-feedback"> Valid last name is required. </div>
                         </div>
@@ -220,11 +220,144 @@
     </div>
   </div>
 
+
+
+
+        <!-- Start Footer  -->
+        <footer>
+            <div class="footer-main">
+              <div class="container">
+                <div class="row">
+                  <!--Footer 1번 (회사정보 부분)-->
+                  <div class="col-lg-4 col-md-12 col-sm-12">
+                    <div class="footer-link-contact">
+                      <h4 class="text_custom">PawMap</h4>
+                      <ul>
+                        <li>
+                          <p>
+                            <i class="fas fa-map-marker-alt"></i>Address: 서울시
+                            강남구 강남대로 11길 13
+                          </p>
+                        </li>
+                        <li>
+                          <p>
+                            <i class="fas fa-phone-square"></i>Phone:
+                            <a href="tel:+1-888705770">+82-2-345-1234</a>
+                          </p>
+                        </li>
+                        <li>
+                          <p>
+                            <i class="fas fa-envelope"></i>Email:
+                            <a href="mailto:contactinfo@gmail.com"
+                              >contactpawmap@gmail.com</a
+                            >
+                          </p>
+                        </li>
+                        <li>
+                          <p>
+                            <i class="fas fa-user"></i>대표자:
+                            <a href="mailto:contactinfo@gmail.com">고결</a>
+                          </p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <!--Footer 2번 (소셜미디어 부분)-->
+                  <div class="col-lg-4 col-md-12 col-sm-12">
+                    <div class="footer-link-contact">
+                      <h4>Social Media</h4>
+                      <div class="footer-top-box">
+                        <p style="margin-left: 20px">
+                          하기 링크를 통해 더 많은 소식을 받아 보세요 !
+                        </p>
+                        <ul>
+                          <li>
+                            <p>
+                              <a href="#" class="inner-box"
+                                ><i
+                                  class="fab fa-facebook inner-box-icon"
+                                  aria-hidden="true"
+                                ></i
+                              ></a>
+                            </p>
+                          </li>
+                          <li>
+                            <p>
+                              <a href="#" class="inner-box"
+                                ><i
+                                  class="fab fa-twitter inner-box-icon"
+                                  aria-hidden="true"
+                                ></i
+                              ></a>
+                            </p>
+                          </li>
+                          <li>
+                            <p>
+                              <a href="#" class="inner-box"
+                                ><i
+                                  class="fab fa-linkedin inner-box-icon"
+                                  aria-hidden="true"
+                                ></i
+                              ></a>
+                            </p>
+                          </li>
+                          <li>
+                            <p>
+                              <a href="#" class="inner-box"
+                                ><i
+                                  class="fab fa-google-plus inner-box-icon"
+                                  aria-hidden="true"
+                                ></i
+                              ></a>
+                            </p>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <!--Footer 3번 (Information 부분)-->
+                  <div class="col-lg-4 col-md-12 col-sm-12">
+                    <div class="footer-link-contact">
+                      <h4>Information</h4>
+                      <div class="footer-link">
+                        <ul>
+                          <li><a href="#">About Us</a></li>
+                          <li><a href="#">개인정보 처리 방침</a></li>
+                          <li><a href="#">이용 약관</a></li>
+                          <li><a href="#">위치기반 서비스 이용 약관</a></li>
+                          <li><a href="#">제휴 문의</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="footer-copyright">
+              <p class="footer-company">
+                All Rights Reserved. &copy; 2021 <a href="#">PawMap</a>
+              </p>
+            </div>
+          </footer>
+      <!-- End Footer  -->
+  
+      <!--채팅 아이콘-->
+      <!-- <button id="chat_icon" onclick="hideDisplay()"
+        ><i class="far fa-comment"></i></button> -->
+      <!--채팅 아이콘 끝-->
+  
+      <!-- 채팅 모달 추가될 자리-->
+      <!-- <div class="chat_container">
+        <button class="chat_close" onclick="chatHide()"><i class="fas fa-times"></i></button>
+      </div> -->
+      <!-- 채팅 모달 끝-->
+  
+      <a href="#" id="back-to-top" title="Back to top" style="display: none"
+        >&uarr;</a>
+   
+    
   
   
-
-
-
     <!-- ALL JS FILES -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/popper.min.js"></script>
