--- a/freshshop-master_1차/adminpage6sheltermanage-tom.html
+++ b/freshshop-master_1차/adminpage6sheltermanage-tom.html
@@ -27,7 +27,9 @@
     <link rel="stylesheet" href="css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
-    
+    <!-- Custom-tom CSS -->
+    <link rel="stylesheet" href="css/custom-tom.css">   
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -87,73 +89,232 @@
     </nav>
     <!-- End Navigation --> <!--관리자 페이지 공통 부분 완료...-->
   </header>
-  <!--adminmainvetmanagement-->
+  <!--보호소정보관리 페이지 시작-->
     <div> 
         <h1 style="text-align: center; font-size:30px; margin-top:5%;">보호소정보 관리</h1>
     </div>
-      <div style="margin-top: 40px; border-style: 3px solid orange ">
-        <table style="margin-left: auto; margin-right: auto; text-align: center;">
-            <tr>
-                <th>번째</th>
-                <th>이름</th>
-                <th>사업자등록번호</th>
-                <th>연락처</th>
-                <th>관리</th>
-                <th>액션</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>일산 보호소</td>
-                <td>002-20-00010</td>
-                <td>031-222-5432</td>
-                <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">관리하기</button></td>
-                <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>강남 보호소</td>
-                <td>002-20-00010</td>
-                <td>031-222-5432</td>
-                <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">관리하기</button></td>
-                <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>분당 보호소</td>
-                <td>002-20-00010</td>
-                <td>031-222-5432</td>
-                <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
-                <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>송파 보호소</td>
-                <td>002-20-00010</td>
-                <td>031-222-5432</td>
-                <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
-                <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>종로 보호소</td>
-                <td>002-20-00010</td>
-                <td>031-222-5432</td>
-                <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
-                <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
-            </tr>
-        </table>
-      </div>
-      <div style="margin-top: 40px">
-        <table style="margin-left:auto; margin-right:auto; text-align: center;">
+        <!-- search 버튼 시작 -->
+        <div class="row">
+          <div class="main-search-input-wrap" >
+              <div class="main-search-input fl-wrap" style="margin-top: 30px;">
+                  <div class="main-search-input-item"> 
+                      <input type="text" value="" placeholder="Search Products..."> 
+                  </div> 
+                <button class="main-search-button">Search</button>
+              </div>
+          </div>
+        </div>
+        <!--search button finished...-->
+        <!--보호소정보 관리 리스트 시작-->
+    <div style="margin-top: 40px; border-style: 3px solid orange ">
+      <table style="margin-left: auto; margin-right: auto; text-align: center;">
           <tr>
-             <td><button style="margin: center;" type="button" onclick="location.href='adminpage7shelteradd-tom.html'">보호소 등록</button></td>
+               <th>번째</th>
+               <th>이름</th>
+               <th>사업자등록번호</th>
+               <th>연락처</th>
+               <th>관리</th>
+               <th>액션</th>
           </tr>
-        </table>
+          <tr>
+               <td>1</td>
+               <td>일산 보호소</td>
+               <td>002-20-00010</td>
+               <td>031-222-5432</td>
+               <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">관리하기</button></td>
+               <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
+          </tr>
+          <tr>
+               <td>2</td>
+               <td>강남 보호소</td>
+               <td>002-20-00010</td>
+               <td>031-222-5432</td>
+               <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">관리하기</button></td>
+               <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
+          </tr>
+          <tr>
+               <td>3</td>
+               <td>분당 보호소</td>
+               <td>002-20-00010</td>
+               <td>031-222-5432</td>
+               <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
+               <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
+          </tr>
+          <tr>
+               <td>4</td>
+               <td>송파 보호소</td>
+               <td>002-20-00010</td>
+               <td>031-222-5432</td>
+               <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>                <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
+          </tr>
+          <tr>
+               <td>5</td>
+               <td>종로 보호소</td>
+               <td>002-20-00010</td>
+               <td>031-222-5432</td>
+               <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
+               <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
+          </tr>
+      </table>
+    </div>
+    <div style="margin-top: 40px">
+      <table style="margin-left:auto; margin-right:auto; text-align: center;">
+          <tr>
+              <td><button style="margin: center;" type="button" onclick="location.href='adminpage7shelteradd-tom.html'">보호소 등록</button></td>
+          </tr>
+      </table>
+    </div>
+    <!--page navigation-->
+    <div class="row mt-2">
+      <div class="col-12" style="margin-top: 40px;">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination justify-content-center">
+              <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">4</a></li>
+              <li class="page-item"><a class="page-link" href="#">5</a></li>
+              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          </ul>
+        </nav>
       </div>
-  
+    </div>
 
-  
-  
+    
+
+    <!-- Start Footer  -->
+    <footer>
+      <div class="footer-main">
+        <div class="container">
+          <div class="row">
+            <!--Footer 1번 (회사정보 부분)-->
+            <div class="col-lg-4 col-md-12 col-sm-12">
+              <div class="footer-link-contact">
+                <h4 class="text_custom">PawMap</h4>
+                <ul>
+                  <li>
+                    <p>
+                      <i class="fas fa-map-marker-alt"></i>Address: 서울시
+                      강남구 강남대로 11길 13
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <i class="fas fa-phone-square"></i>Phone:
+                      <a href="tel:+1-888705770">+82-2-345-1234</a>
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <i class="fas fa-envelope"></i>Email:
+                      <a href="mailto:contactinfo@gmail.com"
+                        >contactpawmap@gmail.com</a
+                      >
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <i class="fas fa-user"></i>대표자:
+                      <a href="mailto:contactinfo@gmail.com">고결</a>
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <!--Footer 2번 (소셜미디어 부분)-->
+            <div class="col-lg-4 col-md-12 col-sm-12">
+              <div class="footer-link-contact">
+                <h4>Social Media</h4>
+                <div class="footer-top-box">
+                  <p style="margin-left: 20px">
+                    하기 링크를 통해 더 많은 소식을 받아 보세요 !
+                  </p>
+                  <ul>
+                    <li>
+                      <p>
+                        <a href="#" class="inner-box"
+                          ><i
+                            class="fab fa-facebook inner-box-icon"
+                            aria-hidden="true"
+                          ></i
+                        ></a>
+                      </p>
+                    </li>
+                    <li>
+                      <p>
+                        <a href="#" class="inner-box"
+                          ><i
+                            class="fab fa-twitter inner-box-icon"
+                            aria-hidden="true"
+                          ></i
+                        ></a>
+                      </p>
+                    </li>
+                    <li>
+                      <p>
+                        <a href="#" class="inner-box"
+                          ><i
+                            class="fab fa-linkedin inner-box-icon"
+                            aria-hidden="true"
+                          ></i
+                        ></a>
+                      </p>
+                    </li>
+                    <li>
+                      <p>
+                        <a href="#" class="inner-box"
+                          ><i
+                            class="fab fa-google-plus inner-box-icon"
+                            aria-hidden="true"
+                          ></i
+                        ></a>
+                      </p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!--Footer 3번 (Information 부분)-->
+            <div class="col-lg-4 col-md-12 col-sm-12">
+              <div class="footer-link-contact">
+                <h4>Information</h4>
+                <div class="footer-link">
+                  <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">개인정보 처리 방침</a></li>
+                    <li><a href="#">이용 약관</a></li>
+                    <li><a href="#">위치기반 서비스 이용 약관</a></li>
+                    <li><a href="#">제휴 문의</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <p class="footer-company">
+          All Rights Reserved. &copy; 2021 <a href="#">PawMap</a>
+        </p>
+      </div>
+    </footer>
+    <!-- End Footer  -->
+
+    <!--채팅 아이콘-->
+    <!-- <button id="chat_icon" onclick="hideDisplay()"
+      ><i class="far fa-comment"></i></button> -->
+    <!--채팅 아이콘 끝-->
+
+    <!-- 채팅 모달 추가될 자리-->
+    <!-- <div class="chat_container">
+      <button class="chat_close" onclick="chatHide()"><i class="fas fa-times"></i></button>
+    </div> -->
+    <!-- 채팅 모달 끝-->
+
+    <a href="#" id="back-to-top" title="Back to top" style="display: none"
+      >&uarr;</a>
+
 
 
 
